bk_ida/gccida/g1/df_analyse_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2541:4: error: expected ';' after expression
rtx v143; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2541:5: error: use of undeclared identifier 'v143'
rtx v143; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2543:4: error: expected ';' after expression
rtx v145; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2543:5: error: use of undeclared identifier 'v145'
rtx v145; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2559:4: error: expected ';' after expression
rtx v161; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2559:5: error: use of undeclared identifier 'v161'
rtx v161; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2562:4: error: expected ';' after expression
rtx v164; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2562:5: error: use of undeclared identifier 'v164'
rtx v164; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:2906:13: error: expected identifier or '('
 struct ref = defs->ref; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3468:1: error: use of undeclared identifier 'v143'
v143 = i30->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3469:17: error: use of undeclared identifier 'v143'
if ( *( _WORD *)v143 == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3470:1: error: use of undeclared identifier 'v143'
v143 = v143->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3470:8: error: use of undeclared identifier 'v143'
v143 = v143->fld[0].rtx; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3471:8: error: use of undeclared identifier 'v143'
v141 = v143->fld[0].rtint; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3477:1: error: use of undeclared identifier 'v145'
v145 = i31->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3478:17: error: use of undeclared identifier 'v145'
if ( *( _WORD *)v145 == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3479:1: error: use of undeclared identifier 'v145'
v145 = v145->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3479:8: error: use of undeclared identifier 'v145'
v145 = v145->fld[0].rtx; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/df.c:3480:43: error: use of undeclared identifier 'v145'
bitmap_set_bit( *( bitmap *)( v148 + 72), v145->fld[0].rtint); 
                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_analyse_1/src/obj/df.o] Error 1
